docs/tests/parser/types/invalid/TypeMatrixNonIntegralCol.b
fn void test() {
    let mat<3,y> m;
}
